--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@ deployment/flask/models/weights_sigmoid_mse_loss.hdf5
 deployment/flask/sample_app.py
 deployment/flask/hello_app.py
 
+training/.ipynb_checkpoints/*
+
 training/original_dataset/*.JPG
 
 training/squared_dataset/*.JPG
