--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,3 +7,4 @@ jobs:
       - checkout # check out the code in the project directory
       - run: echo "hello world" # run the `echo` command
       - run: pwd
+      - run: deployment/flask/dockerize.sh
